# mytube

./: .gitignore  Cargo.toml  flake.nix
src/: channel.rs  lib.rs  main.rs  video.rs
src/channel_update/: mod.rs
