[package]
name = "mytube"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "add-channel"
path = "src/bin/add_channel.rs"

[[bin]]
name = "update-outdated-channels"
path = "src/bin/update_outdated_channels.rs"

[[bin]]
name = "migrate-sql"
path = "src/bin/migrate_sql.rs"

[[bin]]
name = "downloader"

[dependencies]
feed-rs = "2.3.1"
jiff = "0.2.1"
minreq = { version = "2.13.2", features = ["https-rustls"] }
rusqlite = { version = "0.33.0", features = ["chrono"] }
