[package]
name = "mytube"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
feed-rs = "2.3.1"
jiff = "0.2.1"
minreq = { version = "2.13.2", features = ["https-rustls"] }
rusqlite = { version = "0.33.0", features = ["chrono"] }
youtube_dl = "0.10.0"
